--- a/TodoApp/docker-compose.yml
+++ b/TodoApp/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   mongo:
     image: mongo
     restart: always
+    volumes:
+      - './mongodata:/data/db'
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
